--- a/frontend/components/navbar.html
+++ b/frontend/components/navbar.html
@@ -52,6 +52,7 @@
           <li><a href="pages/feeding-awareness.html">Feeding Awareness</a></li>
           <li><a href="pages/pet-travel-tips.html">Pet Travel Tips</a></li>
           <li><a href="pages/pet-health-check.html">Pet Health Check</a></li>
+          <li><a href="pages/pet-products.html">Pet Products</a></li>
           <li><a href="pages/animal-communication.html">Animal Communication</a></li>
           <li><a href="pages/virtual-garden.html">Virtual Garden</a></li>
           <li><a href="pages/events.html">Events Calendar</a></li>
