--- a/frontend/components/navbar.html
+++ b/frontend/components/navbar.html
@@ -74,6 +74,7 @@
           <li><a href="pages/urban-green-spaces.html">🌿 Urban Green Spaces</a></li>
           <li><a href="pages/apex-predators-behavior.html">🦁 Apex Predators Behavior</a></li>
           <li><a href="pages/environment/habitat-conservation.html">Habitat Conservation</a></li>
+          <li><a href="pages/environment/migratory-stopover-sites.html">🕊️ Migratory Stopover Sites</a></li>
           <li><a href="pages/post-conflict-conservation.html">🌿 Post-Conflict Conservation</a></li>
           <li><a href="pages/disease-spillover.html">🦠 Disease Spillover</a></li>
           <li><a href="pages//animal-safety/species-deextinction.html">🧬 Species De-Extinction</a></li>
