Revamp auxiliary sections with 3D assets, enhanced UI/UX, and animations

--- a/frontend/components/navbar.html
+++ b/frontend/components/navbar.html
@@ -47,7 +47,7 @@
         </ul>
       </li>
 
-      <li class="nav-group"><a href="pages/games/kids-zone.html" class="nav-link">Kids Zone</a></li>
+      <li class="nav-group"><a href="pages/games/kids-zone.html" class="nav-link btn-quiz-highlight">Kids Quiz</a></li>
       <li class="nav-group"><a href="pages/contact.html" class="nav-link">Contact</a></li>
 
       <li class="nav-auth">
