--- a/frontend/components/navbar.html
+++ b/frontend/components/navbar.html
@@ -84,6 +84,7 @@
           <li><a href="pages/eco-travel.html">Eco Travel Planner</a></li>
           <li><a href="pages/feeding-awareness.html">Feeding Awareness</a></li>
           <li><a href="pages/eco-chef.html">Eco-Chef Recipes</a></li>
+          <li><a href="pages/permafrost-thaw.html">🧊 Permafrost Thaw</a></li>
         </ul>
       </li>
 
