--- a/frontend/components/navbar.html
+++ b/frontend/components/navbar.html
@@ -74,6 +74,7 @@
           <li><a href="pages/invasive-plant-species.html">🌿 Invasive Plant Species Impact</a></li>
           <li><a href="pages/post-conflict-conservation.html">🌿 Post-Conflict Conservation</a></li>
           <li><a href="pages/disease-spillover.html">🦠 Disease Spillover</a></li>
+          <li><a href="pages/scavenger-decline.html">🦅 Scavenger Decline & Disease Risk</a></li>
           <li><a href="pages//animal-safety/species-deextinction.html">🧬 Species De-Extinction</a></li>
           <li><a href="pages/coral-reef-restoration.html">🪸 Coral Reef Restoration</a></li>
           <li><a href="pages/artificial-reefs-ecological.html">🪸 Artificial Reefs & Ecology</a></li>
